added close connection

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.5",
     "mongodb": "^6.10.0"
   },
   "name": "mongodb",
   "version": "1.0.0",
   "main": "src/app.mjs",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
